--- a/simple-wallet/package.json
+++ b/simple-wallet/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start": "nodemon app.js"
   },
   "author": "chaimongkol sawat",
   "license": "ISC",
@@ -15,9 +15,12 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "gitignore": "^0.7.0",
-    "mariadb": "^3.2.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
-    "sequelize": "^6.33.0"
+    "sequelize": "^6.33.0",
+    "sqlite3": "^5.1.6"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
